--- a/guessanimal/Base.lproj/Main.storyboard
+++ b/guessanimal/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="findanimal" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="guessanimal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -20,49 +20,43 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zfs-Eg-vWp" userLabel="gameBgView">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg1" translatesAutoresizingMaskIntoConstraints="NO" id="2g1-QC-mca">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg2" translatesAutoresizingMaskIntoConstraints="NO" id="2g1-QC-mca">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="86k-xz-ggY">
-                                        <rect key="frame" x="14" y="25" width="120" height="25"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="120" id="fb4-tW-JUs"/>
-                                            <constraint firstAttribute="height" constant="25" id="yYa-uT-6ZI"/>
-                                        </constraints>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="A large bird with a long neck that makes a loud &quot;honk&quot; sound." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zal-PJ-Rfh">
+                                        <rect key="frame" x="22" y="460" width="330" height="110"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A large bird with a long neck that makes a loud &quot;honk&quot; sound." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zal-PJ-Rfh">
-                                        <rect key="frame" x="8" y="65" width="359" height="85"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="359" id="ct1-A6-2X3"/>
-                                            <constraint firstAttribute="height" constant="85" id="f1r-XY-BpT"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
-                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="v4O-tR-dVy" userLabel="centerBgView">
-                                        <rect key="frame" x="40" y="260" width="295" height="267"/>
+                                        <rect key="frame" x="68" y="165" width="264" height="182"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="image_logo" translatesAutoresizingMaskIntoConstraints="NO" id="c3A-ug-64O">
+                                        <rect key="frame" x="135" y="20" width="130" height="125"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 999" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="20" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" id="86k-xz-ggY">
+                                        <rect key="frame" x="125" y="585" width="125" height="25"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="zal-PJ-Rfh" firstAttribute="top" secondItem="86k-xz-ggY" secondAttribute="bottom" constant="15" id="4Or-dF-jsH"/>
                                     <constraint firstItem="2g1-QC-mca" firstAttribute="top" secondItem="zfs-Eg-vWp" secondAttribute="top" id="4ry-jk-sTk"/>
                                     <constraint firstAttribute="trailing" secondItem="2g1-QC-mca" secondAttribute="trailing" id="Akq-XC-kcU"/>
                                     <constraint firstItem="2g1-QC-mca" firstAttribute="leading" secondItem="zfs-Eg-vWp" secondAttribute="leading" id="Blq-Xn-h5A"/>
-                                    <constraint firstItem="zal-PJ-Rfh" firstAttribute="centerX" secondItem="zfs-Eg-vWp" secondAttribute="centerX" id="NZ3-vz-hQk"/>
                                     <constraint firstAttribute="bottom" secondItem="2g1-QC-mca" secondAttribute="bottom" id="jH6-MS-50I"/>
-                                    <constraint firstItem="86k-xz-ggY" firstAttribute="top" secondItem="zfs-Eg-vWp" secondAttribute="top" constant="25" id="oi6-Rf-NS7"/>
-                                    <constraint firstItem="86k-xz-ggY" firstAttribute="leading" secondItem="zfs-Eg-vWp" secondAttribute="leading" constant="14" id="sUQ-7L-V7S"/>
                                 </constraints>
                             </view>
-                            <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="BVl-1u-fst">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="BVl-1u-fst">
+                                <rect key="frame" x="0.0" y="667" width="375" height="647"/>
                                 <subviews>
                                     <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ifl-Lz-JDJ">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
@@ -204,9 +198,10 @@
         <image name="arrow.clockwise" catalog="system" width="113" height="128"/>
         <image name="arrow.left" catalog="system" width="128" height="95"/>
         <image name="arrow.right" catalog="system" width="128" height="95"/>
-        <image name="bg1" width="800" height="1733"/>
+        <image name="bg2" width="800" height="1733"/>
         <image name="house.fill" catalog="system" width="128" height="104"/>
         <image name="icon_home" width="250" height="250"/>
+        <image name="image_logo" width="600" height="573"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
